<resources>
    <string name="app_name">StudyAssistant</string>
    <string name="tab_text_1">Timer</string>
    <string name="tab_text_2">Planner</string>
    <string name="empty"></string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="add_study_reminder">Add Reminder</string>
    <string name="interval">Interval:</string>

    <string name="config_studySessions_learningMinutes">study_sessions.learning_minutes</string>
    <string name="config_studySessions_breakMinutes">study_sessions.break_minutes</string>
    <string name="config_studySessions_intervalCount">study_sessions.intervals</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="alert_cancelSession_title">Cancel session</string>
    <string name="alert_cancelSession_message">Do you really want to cancel the current learning session?</string>

    <string name="alert_study_reminder_due">Hey! Just a quick reminder, that you wanted to study a little bit.</string>

    <string name="alert_study_reminder_delete_message">Do you really want to delete this study reminder? This action can not be undone.</string>
    <string name="alert_study_reminder_delete_title">Are you sure?</string>

    <string name="error_fill_all_fields">Please fill all the fields with the requested information.</string>
    <string name="title_activity_study_reminder_editor">StudyReminderEditorActivity</string>

    <string name="study_reminder_edit">Edit Study Reminder</string>
    <string name="study_reminder_fields_empty">Please fill the title field</string>
    <string name="study_reminder_description">Description</string>
    <string name="study_reminder_importance">Importance</string>
    <string name="study_reminder_title">Title</string>
    <string name="study_reminder_date">Due date</string>

    <string name="general_save">Save</string>
</resources>