<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.StudyReminderEditorActivity">

    <EditText
        android:id="@+id/reminderTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="12"
        android:hint="@string/study_reminder_title"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/reminderDueDateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTitleInput"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_reminder_date"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/reminderDateInput"
            android:hint="@string/study_reminder_date"
            android:focusableInTouchMode="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:cursorVisible="false"
            android:clickable="false"
            android:focusable="false"
            android:ems="8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/study_reminder_importance_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reminderDueDateView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_reminder_importance"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/reminderImportanceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/gray"
            android:minWidth="100dp"
            android:minHeight="30dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/reminderDescriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:maxHeight="300dp"
        android:ems="12"
        android:gravity="top"
        android:hint="@string/study_reminder_description"
        android:inputType="textMultiLine"
        android:minHeight="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/study_reminder_importance_view" />

    <Button
        android:id="@+id/reminderSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/general_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>